k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smllr
  namespace: smllr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smllr
  template:
    metadata:
      labels:
        app: smllr
    spec:
      containers:
        - name: smllr
          image: smllr:dev
          imagePullPolicy: Never 
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
              scheme: HTTP
            initialDelaySeconds: 10
