k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smllr
  namespace: smllr
spec:
  selector:
    name: smllr
  ports:
    - name: smllr
      protocol: TCP
      port: 80
      targetPort: 8080
